--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,30 @@
 [LOW] Clean up g_StarfieldMesh lifetime
     - WHY: Linker error due to undefined symbol.
     - ACTION: Define it in mesh_primitives.cpp, declare properly in a header.
+
+
+
+Star Citizen gives you:
+
+dynamic 3D stars with true parallax
+
+physically accurate brightness falloff over light-years
+
+procedural galaxy noise, color tinting, and depth layering
+
+camera-relative rendering to eliminate float precision errors
+
+millions of stars at zero performance cost
+
+🚀 Star Citizen–Style Starfield: Goals
+You’re not looking for a bokeh blobfield — you’re aiming for this:
+
+Infinite starfield with real spatial layout
+
+Zero overdraw & fast rendering, even with 10,000+ stars
+
+Sharp, twinkling point stars
+
+Parallax with camera movement
+
+Depth sorting (optional: far nebula behind stars)
