ShaderAPI.DLL seperation

--- a/todo.txt
+++ b/todo.txt
@@ -14,11 +14,11 @@
 	
 	
 	
-Step 1: Procedural starfield + nebula background (shader).
 
 
 
 
+DONE KINDA!
 ---------------
 1 Modular Precision System MATHLIB modular 
 Next-Level: Optional precision layer macro
@@ -46,7 +46,70 @@ IMPORTANT: need to sync camera_d → camera_f
 
 ---------------
 
-STEP 3 – Procedural Starfield System
+Optional: Floating Origin Support (Star Citizen-style)
+
+
+Star Citizen–Style Starfield To-Do List
+Phase 1: Foundation — Real 3D Starfield With Double Precision
+Star Data Generation
+Generate thousands of stars with double-precision Vector3_d positions randomly distributed in a spherical volume around the origin.
+Assign each star a brightness and color (optional).
+Camera-relative Positioning & Culling
+Each frame, subtract the double-precision camera position from star positions → get local positions near zero.
+Cull stars outside a set max distance or frustum to reduce GPU load.
+Upload Star Positions to GPU
+Convert local double-precision star positions to float.
+Upload positions (and brightness/color) as a dynamic VBO for point rendering.
+Point Sprite Shader
+Write GLSL vertex+fragment shaders that render each point as a glowing star sprite.
+Use time uniform to add twinkling flicker effect.
+Render Star Points
+Disable depth writes and optionally depth test for stars.
+Draw stars as GL_POINTS with the shader.
+Phase 2: Quality & Performance Enhancements
+Layered Starfields
+Implement multiple star layers with different distances for parallax effect (near, mid, far).
+Procedural Galaxy & Nebula Background
+Add procedural 3D noise textures for nebula colors behind stars.
+Blend nebula layers with stars with alpha blending.
+Brightness Falloff & Star Types
+Implement physically accurate brightness falloff based on star distance.
+Color tint stars by spectral type (blue, yellow, red, etc).
+Efficient Spatial Partitioning
+Use spatial data structures (e.g., octree) to quickly cull and select visible stars for rendering.
+Optimizations
+Use instanced rendering or indirect draw calls for millions of stars.
+Minimize CPU-GPU sync by buffering star data smartly.
+
+Phase 3: Polish & Advanced Effects
+Star Twinkle & Flicker
+Improve twinkle with noise-based or procedural flickering shaders.
+Depth Sorting & Nebula Layers
+Implement depth sorting for blending nebulae behind stars.
+Dynamic Starfield Elements
+Add moving or variable brightness stars.
+Add shooting stars or comets.
+
+Cross-API Porting
+Prepare rendering abstraction for Vulkan and DirectX backends.
+Tooling & Content Pipeline
+Develop starfield editing/generation tools for designers.
+
+Bonus: Extras to Feel Star Citizen-Level
+Use physically based rendering for star glows.
+Add star flares and lens effects.
+Implement galaxy spiral arms procedural placement.
+Real-time star catalog import from astronomy data.
+
+
+
+
+
+
+
+
+Procedural starfield + nebula background (shader).
+Procedural Starfield System
 Once the camera works at double-precision:
 Use Vector3_d for star positions (thousands to millions)
 Stars only render if they're within camera culling bounds
@@ -102,7 +165,7 @@ Step 3: Procedural planets, dynamic props, etc.
   PlanetSystem::RegisterPlanet("earth", 6371.0, Vector3_d(1e6, 0, 0), 1234);
 
 
-		Optional: Floating Origin Support (Star Citizen-style) well we probably want that.. baby 
+		
 		Your To-Do Breakdown:
 		Task	Module	Status
 		Double precision mathlib (Vector3_d, Matrix4x4_d)	mathlib	Done
